<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeClub"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/string_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/searchView"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/string_search"/>
    <item
        android:id="@+id/favoriteFragment2"
        android:enabled="true"
        android:icon="@drawable/ic_interest"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
</menu>